Reset password using email (#6)
* Restore password

* Use a button instead of link

* Rename email container object

* Add 'reset password' specs

* Send 'resetPasswordForm' to backend

* Update password

* Refactor code

* Clean code

--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -30,3 +30,6 @@ ion-view(
               type='submit',
               value="login"
             ).button
+    .row
+      .col
+        .button(ng-click="loginVm.resetPassword()") Restablecer Contraseña
