--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -33,6 +33,10 @@
         <ion-item menu-close href="#/app/map">
           Ubicación
         </ion-item>
+        <ion-item ng-controller="LoginController as loginVm"
+          ng-click="loginVm.logout()">
+          Logout
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
