--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -33,3 +33,4 @@ ion-view(
     .row
       .col
         a(ui-sref='send') ¿Olvidaste tu contraseña?
+        .button(ng-click="loginVm.loginWithFB()") Autorizar Facebook
