Places search box with autocomplete

--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -3,7 +3,7 @@
 
   .slider-slide {
     padding-top: 80px;
-    background-color: #fff;
+    background-color: $white;
     text-align: center;
   }
 }
