--- a/app/templates/map/map.jade
+++ b/app/templates/map/map.jade
@@ -4,8 +4,8 @@ ion-view(
   ion-content(scroll="false")
     input(
       id="input-places"
-      class="input-places"
-      type="text"
+      class="controls"
+      type="text",
       placeholder="Introduzca una ubicación"
     )
     div(
