Add fonts and basic styles in the app

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,8 @@
-// Your application styles go here
+@import "fonts/fonts";
 @import "colors/colors";
+@import "common/variables";
+@import "common/styles";
 
 @import "intro";
 @import "map/map";
+@import "reset/send";
