--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -32,4 +32,4 @@ ion-view(
             ).button
     .row
       .col
-        .button(ng-click="loginVm.resetPassword()") Restablecer Contraseña
+        a(ui-sref='send') ¿Olvidaste tu contraseña?
