--- a/app/styles/reset/send.scss
+++ b/app/styles/reset/send.scss
@@ -37,4 +37,9 @@
       margin-top: 20px;
     }
   }
+  .bar-footer-send-email {
+    padding: 3px;
+    height: 3px;
+    background-color: $background-base-yellow;
+  }
 }
