Move the icon position

--- a/app/styles/common/styles.scss
+++ b/app/styles/common/styles.scss
@@ -18,3 +18,8 @@
   width: 30px;
   height: 20px;
 }
+
+.icon-input-placeholder-email {
+  @extend .icon-input-placeholder;
+  background-image: url('../../images/envelope.png');
+}
