--- a/app/templates/reset/send.jade
+++ b/app/templates/reset/send.jade
@@ -18,7 +18,7 @@ ion-view(
           form(ng-submit='resetVm.resetPassword()')
             .list
               label.item.item-input.item-send-email
-                span.icon-send-email
+                span.icon-input-placeholder-email
                 input(
                     type='email',
                     ng-model='resetVm.resetPasswordForm.email'
