--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -3,7 +3,53 @@
 
   .slider-slide {
     padding-top: 80px;
-    background-color: $white;
+    background-image: url('../images/bg.png');
     text-align: center;
   }
+}
+
+.intro-slides {
+  .slide1 {
+    .logo-envia {
+      background-image: url('../images/logo_envia.png');
+      background-repeat: no-repeat;
+      width: 154px;
+      height: 114px;
+      margin: 0 auto;
+    }
+    .logo-cohete {
+      background-image: url('../images/rocket.png');
+      background-repeat: no-repeat;
+      width: 102px;
+      height: 131px;
+      margin: 0 auto;
+      margin-top: 30px;
+    }
+    .text {
+      color: $white;
+      margin-top: 30px;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
+}
+
+.slider-pager {
+  bottom: 70px;
+
+  .slider-pager-page {
+    color: $yellow;
+  }
+}
+
+.intro-button {
+  position: absolute;
+  bottom: 0;
+  width: 100px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: $yellow;
+  color: $white;
+  border-radius: 10px;
 }
