--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -1,18 +1,19 @@
-ion-view(view-title="Intro")
-  ion-nav-buttons(side="left")
-    button.button.button-positive.button-clear.no-animation(ng-click="introVm.startApp()" ng-show="!introVm.slideIndex")
-      | Skip Intro
-    button.button.button-positive.button-clear.no-animation(ng-click="introVm.previous()" ng-show="introVm.slideIndex > 0")
-      | Previous Slide
-  ion-nav-buttons(side="right")
-    button.button.button-positive.button-clear.no-animation(ng-click="introVm.next()" ng-show="introVm.slideIndex != 2")
-      | Next
-    button.button.button-positive.button-clearno-animation(ng-click="introVm.startApp()" ng-show="introVm.slideIndex == 2")
-      | Start using MyApp
-  ion-slide-box(on-slide-changed="introVm.slideChanged(index)")
-    ion-slide
-      h3 Thank you for choosing the Awesome App!
-    ion-slide
-      h3 Using Awesome
-    ion-slide
-      h3 Any questions?
+//- button.button.button-positive.button-clear.no-animation(ng-click="introVm.next()" ng-show="introVm.slideIndex != 2")
+//-   | Next
+//- button.button.button-positive.button-clearno-animation(ng-click="introVm.startApp()" ng-show="introVm.slideIndex == 2")
+ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
+  ion-slide.slide1
+    .logo-envia
+    .logo-cohete
+    .text
+      | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+      | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+      | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+      | dolore eu fugiat nulla pariatur.
+  ion-slide
+    h3 Using Awesome
+  ion-slide
+    h3 Any questions?
+button.intro-button.button.no-animation(ng-click="introVm.next()")
+  |Continuar
