--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -1,6 +1,3 @@
-//- button.button.button-positive.button-clear.no-animation(ng-click="introVm.next()" ng-show="introVm.slideIndex != 2")
-//-   | Next
-//- button.button.button-positive.button-clearno-animation(ng-click="introVm.startApp()" ng-show="introVm.slideIndex == 2")
 ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
   ion-slide.slide1
     .logo-compra
@@ -20,8 +17,15 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
       | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
       | dolore eu fugiat nulla pariatur.
-  ion-slide
-    h3 Any questions?
+  ion-slide.slide3
+    .logo-vende
+    .logo-precio
+    .text
+      | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+      | tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+      | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+      | dolore eu fugiat nulla pariatur.
 button.intro-button.button.no-animation(ng-click="introVm.next()" ng-show="introVm.slideIndex != 2")
   |Continuar
 button.intro-button.button.no-animation(ng-click="introVm.startApp()" ng-show="introVm.slideIndex == 2")
