--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -1,5 +1,5 @@
 ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
-  ion-slide.slide1
+  ion-slide
     .logo-compra
     .logo-bolsa
     .text
@@ -8,7 +8,7 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
       | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
       | dolore eu fugiat nulla pariatur.
-  ion-slide.slide2
+  ion-slide
     .logo-envia
     .logo-cohete
     .text
@@ -17,7 +17,7 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
       | quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
       | dolore eu fugiat nulla pariatur.
-  ion-slide.slide3
+  ion-slide
     .logo-vende
     .logo-precio
     .text
