--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -1,3 +1,11 @@
+@mixin background-centered($url, $width, $height) {
+  background-image: url($url);
+  background-repeat: no-repeat;
+  width: $width;
+  height: $height;
+  margin: 0 auto;
+}
+
 .slider {
   height: 100%;
 
@@ -9,62 +17,32 @@
 }
 
 .intro-slides {
+
+  .logo-compra {
+    @include background-centered('../images/logo_compra.png', 193px, 118px);
+  }
+  .logo-bolsa {
+    @include background-centered('../images/bag.png', 102px, 131px);
+  }
+  .logo-envia {
+    @include background-centered('../images/logo_envia.png', 154px, 114px);
+  }
+  .logo-cohete {
+    @include background-centered('../images/rocket.png', 102px, 131px);
+  }
+  .logo-vende {
+    @include background-centered('../images/logo_vende.png', 170px, 114px);
+  }
+  .logo-precio {
+    @include background-centered('../images/price_tag.png', 102px, 150px);
+  }
   .text {
     color: $white;
-    margin-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
   }
-  .slide1 {
-    .logo-compra {
-      background-image: url('../images/logo_compra.png');
-      background-repeat: no-repeat;
-      width: 193px;
-      height: 118px;
-      margin: 0 auto;
-    }
-    .logo-bolsa {
-      background-image: url('../images/bag.png');
-      background-repeat: no-repeat;
-      width: 102px;
-      height: 131px;
-      margin: 0 auto;
-      margin-top: 30px;
-    }
-  }
-  .slide2 {
-    .logo-envia {
-      background-image: url('../images/logo_envia.png');
-      background-repeat: no-repeat;
-      width: 154px;
-      height: 114px;
-      margin: 0 auto;
-    }
-    .logo-cohete {
-      background-image: url('../images/rocket.png');
-      background-repeat: no-repeat;
-      width: 102px;
-      height: 131px;
-      margin: 0 auto;
-      margin-top: 30px;
-    }
-  }
-  .slide3 {
-    .logo-vende {
-      background-image: url('../images/logo_vende.png');
-      background-repeat: no-repeat;
-      width: 170px;
-      height: 114px;
-      margin: 0 auto;
-    }
-    .logo-precio {
-      background-image: url('../images/price_tag.png');
-      background-repeat: no-repeat;
-      width: 102px;
-      height: 150px;
-      margin: 0 auto;
-      margin-top: 30px;
-    }
+  .text, .logo-bolsa, .logo-cohete, .logo-precio {
+    margin-top: 30px;
   }
 }
 
