Add styles to login page

--- a/app/styles/common/styles.scss
+++ b/app/styles/common/styles.scss
@@ -23,3 +23,13 @@
   @extend .icon-input-placeholder;
   background-image: url('../../images/envelope.png');
 }
+
+.icon-input-placeholder-password {
+  @extend .icon-input-placeholder;
+  background-image: url('../../images/lock.png');
+}
+
+.icon-placeholder-facebook {
+  @extend .icon-input-placeholder;
+  background-image: url('../../images/fb.png');
+}
