--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,8 +2,10 @@
 @import "colors/colors";
 @import "common/variables";
 @import "common/styles";
+@import "common/mixins";
 
 @import "intro";
+@import "login";
 @import "map/map";
 @import "reset/send";
 @import "directives/back-button"
