Add styles for register with mail

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,7 @@
 
 @import "intro";
 @import "login";
+@import "register";
 @import "map/map";
 @import "reset/send";
 @import "directives/back-button"
