Add prelogin page and styles for it

--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -3,6 +3,7 @@ ion-view(
   hide-nav-bar="true"
 )
   ion-content(scroll="false")
+    back-button
     .row
       form.form-container(ng-submit='registerVm.register()')
         .register-title Crear mi cuenta
