Add facebook login in prelogin

--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -6,7 +6,7 @@ ion-view(
     .row
       .logo
     .row.form-container
-      .button.facebook-login(ng-click="loginVm.loginWithFB()") 
+      .button.facebook-login(ng-click="preVm.loginWithFB()") 
         span.icon-placeholder-facebook
         span.input-facebook-login Continuar con facebook
     .row.form-container
