--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -2,7 +2,7 @@ ion-view(
   view-title="Login",
   hide-nav-bar="true"
 )
-  ion-content(scroll="false")
+  ion-content
     .row
       .logo
     .row.form-container
