--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -2,7 +2,7 @@ ion-view(
   view-title="Registro",
   hide-nav-bar="true"
 )
-  ion-content(scroll="false")
+  ion-content
     back-button
     .row
       form.form-container(ng-submit='registerVm.register()')
