--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -7,8 +7,7 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
         img
     .row
       .text
-          | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          | tempor incididunt ut labore et dolore magna.
+          |Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple! 
   ion-slide
     .list
       .item.item-image.logo-vende
@@ -17,8 +16,7 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
         img
     .row
       .text
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        | tempor incididunt ut labore et dolore magna.
+        |Dales a tus clientes lo que deseen, cuando lo deseen, donde ellos lo deseen, ¡Simple!
   ion-slide
     .list
       .item.item-image.logo-envia
@@ -27,10 +25,9 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
         img
     .row
       .text
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        | tempor incididunt ut labore et dolore magna.
+        |No te preocupes, el trabajo difícil lo hacemos por ti, ¡Simple!
 .bar.bar-footer.bar-intro-button
   button.intro-button.button.no-animation(ng-click="introVm.next()" ng-if="introVm.slideIndex != 2")
     |Continuar
   button.intro-button.button.no-animation(ng-click="introVm.startApp()" ng-if="introVm.slideIndex == 2")
-    |Empezar
+    |¡Genial!
