revise styles for prelogin buttons
http://nodriza.noggalito.com/issues/297#note-8

--- a/app/styles/common/styles.scss
+++ b/app/styles/common/styles.scss
@@ -37,5 +37,6 @@
 
 .icon-placeholder-facebook {
   @extend .icon-input-placeholder;
-  background-image: url('../images/fb.png');
+  background-image: url('../images/FB-f-Logo__white_29.png');
+  background-size: contain;
 }
