--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -1,13 +1,11 @@
 ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
   ion-slide
     .list
-      .item.item-image.logo-compra
-        img
-      .item.item-image.logo-bolsa
-        img
+      .list-logo.logo-compra
+      .list-logo.logo-bolsa
     .row
       .text
-          |Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple! 
+        | Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple! 
   ion-slide
     .list
       .item.item-image.logo-vende
