--- a/app/styles/common/styles.scss
+++ b/app/styles/common/styles.scss
@@ -14,7 +14,7 @@
 .bar-footer-send-email {
   padding: 3px;
   height: 3px;
-  background-color: $background-base-yellow;
+  background-color: $base-yellow;
 }
 
 .icon-input-placeholder {
