--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,6 +1,5 @@
 .logo {
   @include background-centered('../images/logo_color.png', 100%, 125px);
-  background-position: 50%;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -25,7 +24,7 @@
 .button-login, .facebook-login {
   @extend .common-button;
   font-family: Montserrat-Light;
-  background-color: $background-base-yellow;
+  background-color: $base-yellow;
   margin-top: 20px;
   color: $white;
   width: 100%;
