--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
+@import "../bower_components/ionic/scss/_variables";
+
 @import "fonts/fonts";
 @import "colors/colors";
-@import "common/variables";
 @import "common/styles";
 @import "common/mixins";
 
