--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -1,26 +1,23 @@
 ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
   ion-slide
     .list
-      .list-logo.logo-compra
-      .list-logo.logo-bolsa
+      .list-logo.above.logo-compra
+      .list-logo.below.logo-bolsa
     .row
       .text
-        | Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple! 
+        | Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple!
+
   ion-slide
     .list
-      .item.item-image.logo-vende
-        img
-      .item.item-image.logo-precio
-        img
+      .list-logo.above.logo-vende
+      .list-logo.below.logo-precio
     .row
       .text
-        |Dales a tus clientes lo que deseen, cuando lo deseen, donde ellos lo deseen, ¡Simple!
+        | Dales a tus clientes lo que deseen, cuando lo deseen, donde ellos lo deseen, ¡Simple!
   ion-slide
     .list
-      .item.item-image.logo-envia
-        img
-      .item.item-image.logo-cohete
-        img
+      .list-logo.above.logo-envia
+      .list-logo.below.logo-cohete
     .row
       .text
         |No te preocupes, el trabajo difícil lo hacemos por ti, ¡Simple!
