--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,5 +1,6 @@
 .logo {
-  @include background-centered('../images/logo_color.png', 100%, 125px);
+  @include background-centered('../images/logo_color.png');
+  height: 125px;
   margin-top: 50px;
   margin-bottom: 50px;
 }
