Some improvements in 'Reset password'

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,5 +10,6 @@
 @import "register";
 @import "map/map";
 @import "reset/send";
+@import "reset/reset";
 @import "overrides/bar-header";
 @import "directives/back-button"
