Update map styles

--- a/app/styles/map/map.scss
+++ b/app/styles/map/map.scss
@@ -1,20 +1,24 @@
-#map {
+.map-view {
   height: 100%;
-  width: 100%;
-}
 
-#input-places {
-  background-color: $white;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 100%;
-}
+  #map {
+    height: 100%;
+    width: 100%;
+  }
 
-#input-places:focus {
-  outline: none;
-  border-color: $base-blue;
-  box-shadow: 0 0 10px $base-blue;
+  #input-places {
+    background-color: $white;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 100%;
+  }
+
+  #input-places:focus {
+    outline: none;
+    border-color: $base-blue;
+    box-shadow: 0 0 10px $base-blue;
+  }
 }
