--- a/app/templates/map/map.jade
+++ b/app/templates/map/map.jade
@@ -1,16 +1,17 @@
 ion-view(
   view-title="Ubicación"
 )
-  ion-content
-    input(
-      id="input-places"
-      class="controls"
-      type="text"
-      placeholder="Introduzca una ubicación"
-      ng-autocomplete
-      ng-focus="mapVm.disableTap()"
-    )
-    div(
-      id="map"
-      data-tap-disabled="true"
-    )
+  ion-content(scroll="false")
+    .map-view
+      input(
+        id="input-places"
+        class="controls"
+        type="text"
+        placeholder="Introduzca una ubicación"
+        ng-autocomplete
+        ng-focus="mapVm.disableTap()"
+      )
+      div(
+        id="map"
+        data-tap-disabled="true"
+      )
