--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 
 @import "fonts/fonts";
 @import "colors/colors";
+@import "common/rows";
 @import "common/styles";
 @import "common/mixins";
 
@@ -11,5 +12,6 @@
 @import "map/map";
 @import "reset/send";
 @import "reset/reset";
+@import "overrides/scroll";
 @import "overrides/bar-header";
 @import "directives/back-button"
