--- a/app/styles/common/styles.scss
+++ b/app/styles/common/styles.scss
@@ -20,9 +20,11 @@
 .icon-input-placeholder {
   position: absolute;
   background-repeat: no-repeat;
-  margin-top: 10px;
   width: 30px;
   height: 20px;
+  margin: auto;
+  top: 50%;
+  bottom: 50%;
 }
 
 .icon-input-placeholder-email {
