--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -22,6 +22,7 @@ ion-view(
                 required='required'
                 placeholder='Correo electrónico'
                 class='input-send-email'
+                autosize-input
               )
           label.item.item-input.item-send-password
             span.icon-input-placeholder-password
