wipe styles WIP

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 @import "common/rows";
 @import "common/styles";
 @import "common/mixins";
+@import "common/inputs";
 
 @import "intro";
 @import "login";
