--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -13,7 +13,6 @@ ion-view(
       a.button.button-login.button-block(ui-sref='register')
         span Registrarme usando mi email
 .bar.bar-footer.bar-light
-  .title ¿Ya tienes cuenta?
-    | &nbsp;
+  .title ¿Ya tienes cuenta?&nbsp;
     a(ui-sref="login") Inicia sesión
 .bar.bar-footer.bar-footer-send-email
