--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -9,7 +9,7 @@ ion-view(
     .row
       form.form-container(ng-submit='loginVm.login()')
         .list
-          label.item.item-input.item-send-email
+          label.item.item-input
             span.icon-input-placeholder-email
             input(
                 type='email',
@@ -17,7 +17,7 @@ ion-view(
                 required='required'
                 placeholder='Correo electrónico'
               )
-          label.item.item-input.item-send-password
+          label.item.item-input
             span.icon-input-placeholder-password
             input(
               type='password',
