--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -14,7 +14,7 @@ ion-view(
         ng-submit='registerVm.register()'
       )
         .list
-          label.item.item-input.item-send-email
+          label.item.item-input
             span.icon-input-placeholder-email
             input(
                 type='email',
@@ -23,7 +23,7 @@ ion-view(
                 placeholder='Correo electrónico'
                 autosize-input
               )
-          label.item.item-input.item-send-password
+          label.item.item-input
             span.icon-input-placeholder-password
             input(
               type='password',
@@ -31,7 +31,7 @@ ion-view(
               required='required',
               placeholder="Contraseña"
             )
-          label.item.item-input.item-send-password
+          label.item.item-input
             span.icon-input-placeholder-password
             input(
               type='password',
