--- a/app/templates/reset/reset.jade
+++ b/app/templates/reset/reset.jade
@@ -10,7 +10,7 @@ ion-view(
       .row
         form.form-container(ng-submit='resetVm.updatePassword()')
           .list
-            label.item.item-input.item-send-password
+            label.item.item-input
               span.icon-input-placeholder-password
               input(
                 type='password',
@@ -18,7 +18,7 @@ ion-view(
                 required='required',
                 placeholder="Contraseña"
               )
-            label.item.item-input.item-send-password
+            label.item.item-input
               span.icon-input-placeholder-password
               input(
                 type='password',
