--- a/app/styles/common/inputs.scss
+++ b/app/styles/common/inputs.scss
@@ -7,3 +7,12 @@ input {
     padding-left: 40px;
   }
 }
+
+.item-input {
+  padding: 6px 0 5px 5px;
+  margin-bottom: 2px;
+  // hide borders
+  border-left: none;
+  border-right: none;
+  border-top: none;
+}
