--- a/app/templates/reset/send.jade
+++ b/app/templates/reset/send.jade
@@ -16,7 +16,7 @@ ion-view(
       .row
         form.form-container(ng-submit='resetVm.resetPassword()')
           .list
-            label.item.item-input.item-send-email
+            label.item.item-input
               span.icon-input-placeholder-email
               input(
                   type='email',
