--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -7,8 +7,8 @@ ion-view(
       .logo
     .row.form-container
       .button.facebook-login(ng-click="preVm.loginWithFB()")
-        span.icon-placeholder-facebook
-        span.input-facebook-login Continuar con facebook
+        span.fb-left-icon
+        span.fb-copytext Continuar con facebook
     .row.form-container
       a.button.button-login.button-block(ui-sref='register')
         span Registrarme usando mi email
