--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -15,7 +15,7 @@ ion-view(
       )
         .list
           label.item.item-input
-            span.icon-input-placeholder-email
+            span.email-left-icon
             input(
                 type='email',
                 ng-model='registerVm.registerForm.email'
@@ -24,7 +24,7 @@ ion-view(
                 autosize-input
               )
           label.item.item-input
-            span.icon-input-placeholder-password
+            span.lock-left-icon
             input(
               type='password',
               ng-model='registerVm.registerForm.password',
@@ -32,7 +32,7 @@ ion-view(
               placeholder="Contraseña"
             )
           label.item.item-input
-            span.icon-input-placeholder-password
+            span.lock-left-icon
             input(
               type='password',
               ng-model='registerVm.registerForm.password_confirmation',
@@ -46,6 +46,6 @@ ion-view(
             ).button.button-login.button-block
     .row.form-container
       .button.facebook-login(ng-click="registerVm.loginWithFB()")
-        span.icon-placeholder-facebook
-        span.input-facebook-login Continuar con facebook
+        span.fb-left-icon
+        span.fb-copytext Continuar con facebook
 .bar.bar-footer.bar-footer-send-email
