--- a/app/templates/reset/send.jade
+++ b/app/templates/reset/send.jade
@@ -17,7 +17,7 @@ ion-view(
         form.form-container(ng-submit='resetVm.resetPassword()')
           .list
             label.item.item-input
-              span.icon-input-placeholder-email
+              span.email-left-icon
               input(
                   type='email',
                   ng-model='resetVm.resetPasswordForm.email'
@@ -27,7 +27,7 @@ ion-view(
           .button-actions
             button(
                 type='submit'
-              ).button.button-full.button-positive.button-send-email
+              ).button.button-full.button-primary
               | Restablecer contraseña
 
   .bar.bar-footer.bar-footer-send-email
