--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,11 +3,11 @@
 @import "fonts/fonts";
 @import "colors/colors";
 @import "common/rows";
-@import "common/styles";
 @import "common/mixins";
 @import "common/inputs";
-@import "common/input_icons";
 @import "common/buttons";
+@import "common/bar-footer";
+@import "common/input_icons";
 
 @import "intro";
 @import "login";
