--- a/app/templates/register/register.jade
+++ b/app/templates/register/register.jade
@@ -43,7 +43,7 @@ ion-view(
             input(
               type='submit',
               value="¡Regístrame!"
-            ).button.button-login.button-block
+            ).button.button-primary.button-block
     .row.form-container
       .button.facebook-login(ng-click="registerVm.loginWithFB()")
         span.fb-left-icon
