--- a/app/templates/reset/send.jade
+++ b/app/templates/reset/send.jade
@@ -27,7 +27,7 @@ ion-view(
           .button-actions
             button(
                 type='submit'
-              ).button.button-full.button-primary
+              ).button.button-full.button-primary.spaced
               | Restablecer contraseña
 
   .bar.bar-footer.bar-footer-send-email
