--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -1,7 +1,12 @@
+.button {
+  margin: auto;
+}
+
 .common-button {
   border-radius: 8px;
   font-family: Montserrat-Light;
   color: $white;
+  width: 100%;
   background-color: $base-yellow;
   -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -11,13 +16,16 @@
 .button-primary,
 .button-primary.button-full {
   @extend .common-button;
-  margin-top: 30px;
+  margin-top: 20px;
+
+  &.spaced {
+    margin-top: 30px;
+  }
 }
 
 .facebook-login {
   @extend .common-button;
   background-color: $facebook-blue;
-  width: 100%;
 
   .fb-copytext {
     padding-left: 30px;
