--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -10,7 +10,7 @@ ion-view(
         span.fb-left-icon
         span.fb-copytext Continuar con facebook
     .row.form-container
-      a.button.button-login.button-block(ui-sref='register')
+      a.button.button-primary.button-block(ui-sref='register')
         span Registrarme usando mi email
 .bar.bar-footer.bar-light
   .title ¿Ya tienes cuenta?&nbsp;
