--- a/app/templates/reset/reset.jade
+++ b/app/templates/reset/reset.jade
@@ -29,6 +29,6 @@ ion-view(
           .button-actions
             button(
               type='submit'
-            ).button.button-full.button-primary
+            ).button.button-full.button-primary.spaced
               | Actualizar contraseña
   .bar.bar-footer.bar-footer-send-email
