--- a/app/styles/map/map.scss
+++ b/app/styles/map/map.scss
@@ -8,7 +8,7 @@
 
   #input-places {
     background-color: $white;
-    font-family: Roboto;
+    font-family: Montserrat-Light;
     font-size: 15px;
     font-weight: 300;
     padding: 0 11px 0 13px;
